Allow the address and port of the gerrit test server to be configured by a system property
Change-Id: Ic08136435932219b0470bc0505d8f966c5836108
Signed-off-by: Pascal Rapicault <pascal@rapicorp.com>